added payment-microservice + added e2e tests